# anti-spoof

sherpa-onnx-master/sherpa-onnx-master/: local.properties
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSimulateStreamingAsr/app/src/main/java/com/k2fsa/sherpa/onnx/simulate/streaming/asr/: SimulateStreamingAsr.kt
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/: build.gradle.kts
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/: AndroidManifest.xml
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/cpp/: CMakeLists.txt  antispoof_jni.cpp
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/cpp/include/: onnxruntime_ep_c_api.h
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/java/com/k2fsa/sherpa/onnx/speaker/identification/: AntiSpoof.kt  AntiSpoofJNI.kt  AntiSpoofRealtime.kt  AntiSpoofThreshold.kt  AudioValidator.kt  CallStateManager.kt  MainActivity.kt  NavBarItems.kt  NavRoutes.kt  OnlineStream.kt  SherpaOnnx.kt  Speaker.kt  SpeakerDatabaseHelper.kt  TranscriptManager.kt
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/res/drawable/: hero_active.xml  hero_idle.xml
sherpa-onnx-master/sherpa-onnx-master/android/SherpaOnnxSpeakerIdentification/app/src/main/res/values/: strings.xml
(+22 files in other folders)
